// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`brucharacters should add and remove characters from the database regardless of case 1`] = `
Object {
  "pathname": "/s:test/get/ps2:v2/character_name",
  "searchParams": Object {
    "name.first_lower": "customchar",
  },
}
`;

exports[`brucharacters should add and remove characters from the database regardless of case 2`] = `
Object {
  "pathname": "/s:test/get/ps2:v2/character_name",
  "searchParams": Object {
    "name.first_lower": "customchar",
  },
}
`;

exports[`brucharacters should not remove a character that is not in the list 1`] = `
Object {
  "pathname": "/s:test/get/ps2:v2/character_name",
  "searchParams": Object {
    "name.first_lower": "unknownchar",
  },
}
`;
